style: fix layout shift canvas size

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -34,7 +34,7 @@
   justify-content: space-between;
   width: 100vw;
   height: 100vh;
-  overflow: auto;
+  overflow: hidden;
 }
 
 a {
@@ -68,8 +68,9 @@ h1 {
   font-family: monospace;
   will-change: filter;
   transition: filter 300ms;
+  font-size: medium;
   /* height: 6em; */
-  /* padding: 1em; */
+  padding: 1em;
 }
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
@@ -87,17 +88,29 @@ h1 {
 }
 
 header {
-  display: flex;
+  z-index: 50;
+  --gap: 0.618rem;
   align-items: center;
+  border-radius: var(--gap);
+  /* border: 1px solid #333333; */
+  /* box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.15); */
+  display: flex;
+  gap: var(--gap);
   justify-content: space-between;
-  gap: 1rem;
+  margin: calc(var(--gap) / 2);
   max-width: 100vw;
+  padding-block: calc(var(--gap) / 2);
+  padding-inline: var(--gap);
+  position: absolute;
+  top: 0;
+  /* width: 61.8vw; */
 }
 
 .controls {
   background: rgba(0, 0, 0, 0.15);
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  /* grid-template-columns: repeat(3, 1fr); */
+  grid-auto-flow: column;
   align-items: center;
   border-radius: 0.5rem;
   gap: 0.5rem;
@@ -120,6 +133,10 @@ header {
   height: 2rem;
   font-size: smaller;
 }
+#controlsColorPickerInput {
+  width: 1rem;
+  height: 1rem;
+}
 
 #controlsClearButton {
   border-radius: 4px;
@@ -141,15 +158,23 @@ header {
   width: 1em;
 }
 
-aside {
+aside#messageAsideRef {
+  right: 0;
+  height: 100%;
+  position: absolute;
   background: rgba(0, 0, 0, 0.15);
   border-radius: 0.5rem;
   display: flex;
+  justify-content: space-between;
   flex-direction: column;
   padding: 0.5rem;
 }
 
-aside #messagesListRef {
+aside:not(#formRef) {
+  pointer-events: none;
+}
+
+aside#messagesListRef {
   height: 88vh;
   border: 0px solid red;
   border-radius: 0.5rem;
@@ -176,6 +201,10 @@ aside #messagesListRef > #formRef {
   margin-block-start: auto;
   background-color: wheat;
 }
+/* #messagesListRef, */
+#formRef {
+  pointer-events: all;
+}
 
 main {
   display: grid;
@@ -189,9 +218,14 @@ main {
 /* position: relative; */
 /* width: 100%; */
 /* height: 0; */
-/* padding-bottom: 56.25%; */
+/* padding-bottom: 56.25%;  */
 /* set a 16:9 aspect ratio */
 /* } */
+.canvas-container {
+  width: 50%;
+  height: 50%;
+  position: relative;
+}
 
 /* .canvas-container canvas { */
 /*   position: absolute; */
